# aoc

./: .gitignore  blog.py  runn.py  runner.py  runner2.sh  template.py  test.html  test.py  utils.py
2015/d10/: main.py
2015/d11/: main.py
2015/d12/: main.py
2015/d13/: main.py
2015/d14/: main.py
2015/d15/: main.py
2015/d16/: main.py
2015/d17/: main.py
2015/d18/: main.py
2015/d19/: main.py
2015/d20/: main.py
2015/d21/: main.py
2015/d22/: main.py
2015/d23/: main.py
2015/d24/: main.py
2015/d7/: main.py
2015/d8/: main.py
2015/d9/: main.py
2019/d1/: main.py
2019/d2/: main.py
2019/d3/: main.py
2019/d4/: main.py
2019/d5/: main.py
2019/d6/: main.py
2019/d7/: main.py
2023/d1/: main.py
2023/d2/: main.py
2023/d3/: main.py
2023/d4/: main.py
2023/d5/: main.py
2023/d6/: main.py
2023/d7/: main.py
2023/d8/: main.py
2024/d1/: d1.py  main.py
2024/d10/: main.py
2024/d11/: main.py
2024/d12/: main.py
2024/d13/: main.py
2024/d14/: main.py
2024/d15/: main.py
2024/d16/: main.py
2024/d17/: main.py
2024/d18/: main.py
2024/d19/: main.py  repl_test.py
2024/d2/: d2.py  main.py
2024/d20/: main.py
2024/d21/: main.py
2024/d22/: main.py
2024/d23/: main.py
2024/d24/: derivations  main.py
2024/d25/: main.py
2024/d3/: main.py
aoc_rust/: Cargo.toml  runner.py  template.rs
aoc_rust/src/: aoc_utils.rs  lib.rs
aoc_rust/src/2024/: d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs
chinese/: main.py  test.py
rust_test/: Cargo.toml  learning  learning.rs  pasta  pasta.rs  runner.py  template.rs
(+16 files in other folders)
