[package]
name = "aoc_rust"                              # the name of the package
version = "0.1.0"                              # the current version, obeying semver
authors = ["Aadish <aadish@ohs.stanford.edu>"]
edition = "2021"

[[bin]]
name = "rust_test"
path = "src/2024/d4.rs"

[dependencies]
regex = "1.3.9"
