[package]
name = "aoc_rust"                              # the name of the package
version = "0.1.0"                              # the current version, obeying semver
authors = ["Aadish <aadish@ohs.stanford.edu>"]
edition = "2021"

[[bin]]
name = "aoc_rust"
path = "src/2024/d6.rs"

[dependencies]
regex = "1.3.9"
